--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@ font-family: Helvetica, sans-serif;
 color: grey;
 }
 
+h2 {
+margin-top: 30px;
+margin-bottom: 10px;
+}
+
 .collapsible {
   background-color: #777;
   color: white;
@@ -37,4 +42,5 @@ color: grey;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
+  font-family: Helvetica, sans serif;
 }
