--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,16 @@ margin-top: 30px;
 margin-bottom: 10px;
 }
 
+nav {
+font-family: sans-serif;
+font-size: 18px;
+padding: 5px;
+}
+
+nav li {
+  padding: 5px;
+}
+
 .collapsible {
   background-color: #777;
   color: white;
