--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ nav a {
 
 .code, .string{
 font-family: "Courier New", Consolas, monospace;
+  font-weight: 'bold';
 background-color: #ecf0f3;
 }
 
