--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,20 +41,48 @@
   </nav>
 
 <h1>Test your regex</h1>
-<form action="/index" method="post">
+<form action="" method="post">
+  {{ form.hidden_tag() }}
   <div class="test-regex">
-    <label for="test-regex">Enter the regular expression to test: </label>
-    <input type="text" id="test-regex" name="test-regex" placeholder="for ex.: ^[MTWFS][a-z]+day[s]?">
+    <p>
+      Enter the regular expression to test:<br>
+      {{ form.regex(size=32) }}
+    </p>
   </div>
   <div class="test-string">
-    <label for="test-string">Enter the text to search for matches: </label>
-    <textarea id="test-string" name="test-string" rows="4" cols="50"></textarea>
-  </div>
-  <button type="submit">Submit</button>
+    <p>Enter the text to search for matches: <br>
+    {{ form.test_string}} 
+  </p>
+  <p>{{ form.submit() }}</p>
+</div>
 </form>
-<div class="found-matches">
-  <label for="found-matches">List of found matches: </label>
-  <textarea id="found-matches" name="found-matches" rows="4" cols="30">{{ found_matches }}</textarea>
+<div class="match-result">
+  <p>Match result:</p>
+  {{ match_result | safe }} <!-- using '|safe' argument to render as html code-->
+</div>
+<div class="match-list">
+<p>List of matches:</p>
+  Number of matches: {{ num_matches }}
+<ol>
+  {% for match in match_list %}
+  <li>span= {{ match[0] }}, match= '{{ match[-1] }}'</li>
+  {% endfor %}
+</ol>
+</div>
+<div class="captures">
+  <p>Match captures:</p>
+  {% for capture in captures %}
+  Match {{ capture[1] }}
+    <ol>
+      {% for groups in capture[0] %}
+      <li>
+        {% for group in groups %}
+          {{ group }}
+        {% endfor %}
+      </li>
+      {% endfor %}
+    </ol>
+  {% endfor %}
 </div>
 
 <h1>Quick reference for regular expressions in Python</h1>
